--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -2,3 +2,14 @@ services:
   Anboo\ApiBundle\Validator\EntityExistsValidator:
     arguments:
       - '@doctrine.entitymanager.orm_default'
+
+  Anboo\ApiBundle\Controller\SwaggerUIController:
+    arguments:
+      - '@nelmio_api_doc.generator'
+      - '@twig'
+    tags: ['controller.service_arguments']
+
+  Anboo\ApiBundle\Controller\DocumentationController:
+    arguments:
+      - '@nelmio_api_doc.generator.default'
+    tags: ['controller.service_arguments']
