--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "library",
     "description": "Bundle for Symfony",
     "require": {
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3.8",
+        "php-amqplib/php-amqplib": "^2.9"
     },
     "authors": [
         {
