Remove old code

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Anboo\\ApiBundle\\": "src/"
+            "Anboo\\RabbitmqBundle\\": "src/"
         }
     }
 }
